// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Additional Unit Tests for Enhanced Coverage ComputeStack should handle edge case with single subnet 1`] = `
"{
  "data": {
    "aws_ami": {
      "TestSingleSubnet_LatestAmi_C71E02F7": {
        "filter": [
          {
            "name": "name",
            "values": [
              "amzn2-ami-hvm-*-x86_64-gp2"
            ]
          },
          {
            "name": "virtualization-type",
            "values": [
              "hvm"
            ]
          }
        ],
        "most_recent": true,
        "owners": [
          "amazon"
        ]
      }
    }
  },
  "output": {
    "TestSingleSubnet_instance_ids_FB098F0F": {
      "value": [
        "\${aws_instance.TestSingleSubnet_ec2-instance-1_CAF9CF8F.id}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-2_191D039E.id}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-3_82099D54.id}"
      ]
    },
    "TestSingleSubnet_private_ips_8748C067": {
      "value": [
        "\${aws_instance.TestSingleSubnet_ec2-instance-1_CAF9CF8F.private_ip}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-2_191D039E.private_ip}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-3_82099D54.private_ip}"
      ]
    },
    "TestSingleSubnet_public_ips_849234D8": {
      "value": [
        "\${aws_instance.TestSingleSubnet_ec2-instance-1_CAF9CF8F.public_ip}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-2_191D039E.public_ip}",
        "\${aws_instance.TestSingleSubnet_ec2-instance-3_82099D54.public_ip}"
      ]
    }
  },
  "resource": {
    "aws_instance": {
      "TestSingleSubnet_ec2-instance-1_CAF9CF8F": {
        "ami": "ami-single-test",
        "instance_type": "t3.nano",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-single",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-1",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-single"
        ]
      },
      "TestSingleSubnet_ec2-instance-2_191D039E": {
        "ami": "ami-single-test",
        "instance_type": "t3.nano",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-single",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-2",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-single"
        ]
      },
      "TestSingleSubnet_ec2-instance-3_82099D54": {
        "ami": "ami-single-test",
        "instance_type": "t3.nano",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-single",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-3",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-single"
        ]
      }
    }
  }
}"
`;

exports[`Additional Unit Tests for Enhanced Coverage DatabaseStack should handle password from environment variable 1`] = `
"{
  "output": {
    "TestDatabaseEnv_db_instance_endpoint_2B135E91": {
      "value": "\${aws_db_instance.TestDatabaseEnv_RdsInstance_EF647F58.endpoint}"
    },
    "TestDatabaseEnv_db_instance_id_194FD5E9": {
      "value": "\${aws_db_instance.TestDatabaseEnv_RdsInstance_EF647F58.id}"
    },
    "TestDatabaseEnv_db_instance_port_5594C7D4": {
      "value": "\${aws_db_instance.TestDatabaseEnv_RdsInstance_EF647F58.port}"
    },
    "TestDatabaseEnv_db_subnet_group_id_D9BFB76D": {
      "value": "\${aws_db_subnet_group.TestDatabaseEnv_DbSubnetGroup_60DF1A99.id}"
    }
  },
  "resource": {
    "aws_db_instance": {
      "TestDatabaseEnv_RdsInstance_EF647F58": {
        "allocated_storage": 20,
        "backup_retention_period": 7,
        "backup_window": "03:00-04:00",
        "db_name": "testdb",
        "db_subnet_group_name": "\${aws_db_subnet_group.TestDatabaseEnv_DbSubnetGroup_60DF1A99.name}",
        "engine": "mysql",
        "engine_version": "8.0",
        "final_snapshot_identifier": "myproject-dev-final-snapshot",
        "identifier": "myproject-dev-db",
        "instance_class": "db.t3.micro",
        "maintenance_window": "sun:04:00-sun:05:00",
        "max_allocated_storage": 100,
        "multi_az": false,
        "password": "env-password-123!",
        "publicly_accessible": false,
        "skip_final_snapshot": false,
        "storage_encrypted": true,
        "storage_type": "gp3",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-db",
          "Project": "myproject"
        },
        "username": "admin",
        "vpc_security_group_ids": [
          "sg-test1"
        ]
      }
    },
    "aws_db_subnet_group": {
      "TestDatabaseEnv_DbSubnetGroup_60DF1A99": {
        "name": "myproject-dev-db-subnet-group",
        "subnet_ids": [
          "subnet-test1",
          "subnet-test2"
        ],
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-db-subnet-group",
          "Project": "myproject"
        }
      }
    }
  }
}"
`;

exports[`Unit Tests ComputeStack should create EC2 instances 1`] = `
"{
  "data": {
    "aws_ami": {
      "TestComputeStack_LatestAmi_10DE032D": {
        "filter": [
          {
            "name": "name",
            "values": [
              "amzn2-ami-hvm-*-x86_64-gp2"
            ]
          },
          {
            "name": "virtualization-type",
            "values": [
              "hvm"
            ]
          }
        ],
        "most_recent": true,
        "owners": [
          "amazon"
        ]
      }
    }
  },
  "output": {
    "TestComputeStack_instance_ids_E108FCEE": {
      "value": [
        "\${aws_instance.TestComputeStack_ec2-instance-1_68C0BEB4.id}"
      ]
    },
    "TestComputeStack_private_ips_F5DE3F87": {
      "value": [
        "\${aws_instance.TestComputeStack_ec2-instance-1_68C0BEB4.private_ip}"
      ]
    },
    "TestComputeStack_public_ips_5913A0B1": {
      "value": [
        "\${aws_instance.TestComputeStack_ec2-instance-1_68C0BEB4.public_ip}"
      ]
    }
  },
  "resource": {
    "aws_instance": {
      "TestComputeStack_ec2-instance-1_68C0BEB4": {
        "ami": "ami-test",
        "instance_type": "t3.micro",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-abc123",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-1",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-12345678"
        ]
      }
    }
  }
}"
`;

exports[`Unit Tests ComputeStack should distribute EC2 instances across subnets 1`] = `
"{
  "data": {
    "aws_ami": {
      "TestComputeStackMultiSubnet_LatestAmi_251921C2": {
        "filter": [
          {
            "name": "name",
            "values": [
              "amzn2-ami-hvm-*-x86_64-gp2"
            ]
          },
          {
            "name": "virtualization-type",
            "values": [
              "hvm"
            ]
          }
        ],
        "most_recent": true,
        "owners": [
          "amazon"
        ]
      }
    }
  },
  "output": {
    "TestComputeStackMultiSubnet_instance_ids_89B7FDE7": {
      "value": [
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-1_A885953C.id}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-2_4CA44CF0.id}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-3_93FFBEE3.id}"
      ]
    },
    "TestComputeStackMultiSubnet_private_ips_BC9ED155": {
      "value": [
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-1_A885953C.private_ip}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-2_4CA44CF0.private_ip}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-3_93FFBEE3.private_ip}"
      ]
    },
    "TestComputeStackMultiSubnet_public_ips_D2E77593": {
      "value": [
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-1_A885953C.public_ip}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-2_4CA44CF0.public_ip}",
        "\${aws_instance.TestComputeStackMultiSubnet_ec2-instance-3_93FFBEE3.public_ip}"
      ]
    }
  },
  "resource": {
    "aws_instance": {
      "TestComputeStackMultiSubnet_ec2-instance-1_A885953C": {
        "ami": "ami-123",
        "instance_type": "t2.micro",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-1",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-1",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-xyz"
        ]
      },
      "TestComputeStackMultiSubnet_ec2-instance-2_4CA44CF0": {
        "ami": "ami-123",
        "instance_type": "t2.micro",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-2",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-2",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-xyz"
        ]
      },
      "TestComputeStackMultiSubnet_ec2-instance-3_93FFBEE3": {
        "ami": "ami-123",
        "instance_type": "t2.micro",
        "lifecycle": {
          "create_before_destroy": true
        },
        "monitoring": false,
        "root_block_device": {
          "encrypted": true,
          "volume_size": 20,
          "volume_type": "gp3"
        },
        "subnet_id": "subnet-1",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-instance-3",
          "Project": "myproject"
        },
        "user_data": "#!/bin/bash\\necho \\"Hello from instance!\\" > /var/www/html/index.html\\n",
        "vpc_security_group_ids": [
          "sg-xyz"
        ]
      }
    }
  }
}"
`;

exports[`Unit Tests DatabaseStack should create RDS instance 1`] = `
"{
  "output": {
    "TestDatabase_db_instance_endpoint_C2825FBA": {
      "value": "\${aws_db_instance.TestDatabase_RdsInstance_9804C772.endpoint}"
    },
    "TestDatabase_db_instance_id_A8532610": {
      "value": "\${aws_db_instance.TestDatabase_RdsInstance_9804C772.id}"
    },
    "TestDatabase_db_instance_port_4776BC29": {
      "value": "\${aws_db_instance.TestDatabase_RdsInstance_9804C772.port}"
    },
    "TestDatabase_db_subnet_group_id_37B0B806": {
      "value": "\${aws_db_subnet_group.TestDatabase_DbSubnetGroup_01A7FFD5.id}"
    }
  },
  "resource": {
    "aws_db_instance": {
      "TestDatabase_RdsInstance_9804C772": {
        "allocated_storage": 20,
        "backup_retention_period": 7,
        "backup_window": "03:00-04:00",
        "db_name": "testdb",
        "db_subnet_group_name": "\${aws_db_subnet_group.TestDatabase_DbSubnetGroup_01A7FFD5.name}",
        "engine": "mysql",
        "engine_version": "8.0",
        "final_snapshot_identifier": "myproject-dev-final-snapshot",
        "identifier": "myproject-dev-db",
        "instance_class": "db.t3.micro",
        "maintenance_window": "sun:04:00-sun:05:00",
        "max_allocated_storage": 100,
        "multi_az": false,
        "password": "password123",
        "publicly_accessible": false,
        "skip_final_snapshot": false,
        "storage_encrypted": true,
        "storage_type": "gp3",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-db",
          "Project": "myproject"
        },
        "username": "admin",
        "vpc_security_group_ids": [
          "sg-xyz123"
        ]
      }
    },
    "aws_db_subnet_group": {
      "TestDatabase_DbSubnetGroup_01A7FFD5": {
        "name": "myproject-dev-db-subnet-group",
        "subnet_ids": [
          "subnet-abc123"
        ],
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-db-subnet-group",
          "Project": "myproject"
        }
      }
    }
  }
}"
`;

exports[`Unit Tests SecureVpcStack should create VPC and subnets 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "TestVpc_availableAzs_B0A1704A": {
        "state": "available"
      }
    }
  },
  "output": {
    "TestVpc_internet_gateway_id_8315220D": {
      "value": "\${aws_internet_gateway.TestVpc_Igw_67ED1BDA.id}"
    },
    "TestVpc_nat_gateway_ids_ADE13564": {
      "value": [
        "\${aws_nat_gateway.TestVpc_NatGateway1_D8C36D12.id}",
        "\${aws_nat_gateway.TestVpc_NatGateway2_CD754B20.id}"
      ]
    },
    "TestVpc_private_subnet_ids_4D49FC65": {
      "value": [
        "\${aws_subnet.TestVpc_PrivateSubnet1_B82AFB2A.id}",
        "\${aws_subnet.TestVpc_PrivateSubnet2_DD1E8E6C.id}"
      ]
    },
    "TestVpc_public_subnet_ids_6B6E1E3D": {
      "value": [
        "\${aws_subnet.TestVpc_PublicSubnet1_9B83344E.id}",
        "\${aws_subnet.TestVpc_PublicSubnet2_D89BE3F1.id}"
      ]
    },
    "TestVpc_vpc_id_C24DBE8D": {
      "value": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
    }
  },
  "resource": {
    "aws_eip": {
      "TestVpc_NatEip1_DD40DBB6": {
        "domain": "vpc",
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-nat-eip-1",
          "Project": "myproject"
        }
      },
      "TestVpc_NatEip2_F51AE79B": {
        "domain": "vpc",
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-nat-eip-2",
          "Project": "myproject"
        }
      }
    },
    "aws_internet_gateway": {
      "TestVpc_Igw_67ED1BDA": {
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-igw",
          "Project": "myproject"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      }
    },
    "aws_nat_gateway": {
      "TestVpc_NatGateway1_D8C36D12": {
        "allocation_id": "\${aws_eip.TestVpc_NatEip1_DD40DBB6.id}",
        "lifecycle": {
          "create_before_destroy": true
        },
        "subnet_id": "\${aws_subnet.TestVpc_PublicSubnet1_9B83344E.id}",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-nat-gateway-1",
          "Project": "myproject"
        }
      },
      "TestVpc_NatGateway2_CD754B20": {
        "allocation_id": "\${aws_eip.TestVpc_NatEip2_F51AE79B.id}",
        "lifecycle": {
          "create_before_destroy": true
        },
        "subnet_id": "\${aws_subnet.TestVpc_PublicSubnet2_D89BE3F1.id}",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-nat-gateway-2",
          "Project": "myproject"
        }
      }
    },
    "aws_route_table": {
      "TestVpc_PrivateRT1_10F287B6": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": "\${aws_nat_gateway.TestVpc_NatGateway1_D8C36D12.id}",
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          }
        ],
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-private-rt-1",
          "Project": "myproject"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      },
      "TestVpc_PrivateRT2_676810E6": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": "\${aws_nat_gateway.TestVpc_NatGateway2_CD754B20.id}",
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          }
        ],
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-private-rt-2",
          "Project": "myproject"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      },
      "TestVpc_PublicRT_5BCACF2A": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": "\${aws_internet_gateway.TestVpc_Igw_67ED1BDA.id}",
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          }
        ],
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-public-rt",
          "Project": "myproject"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      }
    },
    "aws_route_table_association": {
      "TestVpc_PrivateRTA1_AAD280EE": {
        "route_table_id": "\${aws_route_table.TestVpc_PrivateRT1_10F287B6.id}",
        "subnet_id": "\${aws_subnet.TestVpc_PrivateSubnet1_B82AFB2A.id}"
      },
      "TestVpc_PrivateRTA2_D9FEF1B3": {
        "route_table_id": "\${aws_route_table.TestVpc_PrivateRT2_676810E6.id}",
        "subnet_id": "\${aws_subnet.TestVpc_PrivateSubnet2_DD1E8E6C.id}"
      },
      "TestVpc_PublicRTA1_1AC6592C": {
        "route_table_id": "\${aws_route_table.TestVpc_PublicRT_5BCACF2A.id}",
        "subnet_id": "\${aws_subnet.TestVpc_PublicSubnet1_9B83344E.id}"
      },
      "TestVpc_PublicRTA2_4CBF6913": {
        "route_table_id": "\${aws_route_table.TestVpc_PublicRT_5BCACF2A.id}",
        "subnet_id": "\${aws_subnet.TestVpc_PublicSubnet2_D89BE3F1.id}"
      }
    },
    "aws_subnet": {
      "TestVpc_PrivateSubnet1_B82AFB2A": {
        "availability_zone": "\${element(data.aws_availability_zones.TestVpc_availableAzs_B0A1704A.names, 0)}",
        "cidr_block": "10.0.11.0/24",
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-private-subnet-1",
          "Project": "myproject",
          "Type": "Private"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      },
      "TestVpc_PrivateSubnet2_DD1E8E6C": {
        "availability_zone": "\${element(data.aws_availability_zones.TestVpc_availableAzs_B0A1704A.names, 1)}",
        "cidr_block": "10.0.12.0/24",
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-private-subnet-2",
          "Project": "myproject",
          "Type": "Private"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      },
      "TestVpc_PublicSubnet1_9B83344E": {
        "availability_zone": "\${element(data.aws_availability_zones.TestVpc_availableAzs_B0A1704A.names, 0)}",
        "cidr_block": "10.0.1.0/24",
        "lifecycle": {
          "create_before_destroy": true
        },
        "map_public_ip_on_launch": true,
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-public-subnet-1",
          "Project": "myproject",
          "Type": "Public"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      },
      "TestVpc_PublicSubnet2_D89BE3F1": {
        "availability_zone": "\${element(data.aws_availability_zones.TestVpc_availableAzs_B0A1704A.names, 1)}",
        "cidr_block": "10.0.2.0/24",
        "lifecycle": {
          "create_before_destroy": true
        },
        "map_public_ip_on_launch": true,
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-public-subnet-2",
          "Project": "myproject",
          "Type": "Public"
        },
        "vpc_id": "\${aws_vpc.TestVpc_MainVpc_0D0A6A5E.id}"
      }
    },
    "aws_vpc": {
      "TestVpc_MainVpc_0D0A6A5E": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-vpc",
          "Project": "myproject"
        }
      }
    }
  }
}"
`;

exports[`Unit Tests SecurityStack should create security groups 1`] = `
"{
  "output": {
    "TestSecurity_app_security_group_id_C3FF71A2": {
      "value": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}"
    },
    "TestSecurity_db_security_group_id_C68268DF": {
      "value": "\${aws_security_group.TestSecurity_db_sg_61A18E4B.id}"
    },
    "TestSecurity_web_security_group_id_F66991CE": {
      "value": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}"
    }
  },
  "resource": {
    "aws_security_group": {
      "TestSecurity_app_sg_4619A875": {
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-app-sg",
          "Project": "myproject"
        },
        "vpc_id": "vpc-0a1b2c3d4e5f67890"
      },
      "TestSecurity_db_sg_61A18E4B": {
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-db-sg",
          "Project": "myproject"
        },
        "vpc_id": "vpc-0a1b2c3d4e5f67890"
      },
      "TestSecurity_web_sg_AF79913E": {
        "lifecycle": {
          "create_before_destroy": true
        },
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-web-sg",
          "Project": "myproject"
        },
        "vpc_id": "vpc-0a1b2c3d4e5f67890"
      }
    },
    "aws_security_group_rule": {
      "TestSecurity_app_egress_db_mysql_C655D8AA": {
        "cidr_blocks": [
          "10.0.0.0/16"
        ],
        "from_port": 3306,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 3306,
        "type": "egress"
      },
      "TestSecurity_app_egress_db_pg_1B45F273": {
        "cidr_blocks": [
          "10.0.0.0/16"
        ],
        "from_port": 5432,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 5432,
        "type": "egress"
      },
      "TestSecurity_app_egress_http_23BA973F": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 80,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 80,
        "type": "egress"
      },
      "TestSecurity_app_egress_https_BB137471": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 443,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 443,
        "type": "egress"
      },
      "TestSecurity_app_http_from_web_002EA3A0": {
        "from_port": 8080,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "source_security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 8080,
        "type": "ingress"
      },
      "TestSecurity_app_ssh_04F9404C": {
        "cidr_blocks": [
          "10.0.0.0/16"
        ],
        "from_port": 22,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 22,
        "type": "ingress"
      },
      "TestSecurity_db_egress_6A652138": {
        "cidr_blocks": [
          "10.0.0.0/16"
        ],
        "from_port": 443,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_db_sg_61A18E4B.id}",
        "to_port": 443,
        "type": "egress"
      },
      "TestSecurity_db_mysql_from_app_38F79FBD": {
        "from_port": 3306,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_db_sg_61A18E4B.id}",
        "source_security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 3306,
        "type": "ingress"
      },
      "TestSecurity_db_pgsql_from_app_676EEF2C": {
        "from_port": 5432,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_db_sg_61A18E4B.id}",
        "source_security_group_id": "\${aws_security_group.TestSecurity_app_sg_4619A875.id}",
        "to_port": 5432,
        "type": "ingress"
      },
      "TestSecurity_web_egress_app_8080_8189CD22": {
        "cidr_blocks": [
          "10.0.0.0/16"
        ],
        "from_port": 8080,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 8080,
        "type": "egress"
      },
      "TestSecurity_web_egress_http_CA981D9B": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 80,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 80,
        "type": "egress"
      },
      "TestSecurity_web_egress_https_8EC90336": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 443,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 443,
        "type": "egress"
      },
      "TestSecurity_web_http_40989D9E": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 80,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 80,
        "type": "ingress"
      },
      "TestSecurity_web_https_57FD8AFE": {
        "cidr_blocks": [
          "0.0.0.0/0"
        ],
        "from_port": 443,
        "protocol": "tcp",
        "security_group_id": "\${aws_security_group.TestSecurity_web_sg_AF79913E.id}",
        "to_port": 443,
        "type": "ingress"
      }
    }
  }
}"
`;

exports[`Unit Tests StorageStack should create an S3 bucket 1`] = `
"{
  "output": {
    "TestStorage_bucket_arn_FBFCD6FC": {
      "value": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.arn}"
    },
    "TestStorage_bucket_domain_name_E7F528DD": {
      "value": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.bucket_domain_name}"
    },
    "TestStorage_bucket_id_35880867": {
      "value": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.id}"
    },
    "TestStorage_bucket_regional_domain_name_5BB2B5FF": {
      "value": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.bucket_regional_domain_name}"
    }
  },
  "resource": {
    "aws_s3_bucket": {
      "TestStorage_MainBucket_1CDF001A": {
        "bucket": "myproject-dev-assets-static",
        "tags": {
          "Environment": "dev",
          "ManagedBy": "Terraform",
          "Name": "myproject-dev-assets-static",
          "Project": "myproject"
        }
      }
    },
    "aws_s3_bucket_public_access_block": {
      "TestStorage_BlockPublicAccess_0EAEB0FE": {
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.id}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true
      }
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "TestStorage_BucketEncryption_593BA108": {
        "bucket": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.id}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256"
            },
            "bucket_key_enabled": false
          }
        ]
      }
    },
    "aws_s3_bucket_versioning": {
      "TestStorage_BucketVersioning_8169A4F5": {
        "bucket": "\${aws_s3_bucket.TestStorage_MainBucket_1CDF001A.id}",
        "versioning_configuration": {
          "status": "Enabled"
        }
      }
    }
  }
}"
`;
